--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -19,6 +19,7 @@ section.filters button {
 	border:0;
 	border-radius: 4px;
 	margin: 11px 30px;
+	float: right;
 }
 section.filters button:hover {
 	opacity: .9;
