--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -7,7 +7,7 @@ section.filters {
 	background-color: white;
 	height: 70px;
 	width: 100%;
-	border: 1px #DDDDDD;
+	border: 1px solid #DDDDDD;
 	border-radius: 4px;
 }
 section.filters button {
