--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -9,7 +9,7 @@ article {
 	width: 390px;
 	padding: 20px;
 	margin: 20px;
-	border: #FF5A5F 1px;
+	border: #FF5A5F solid 1px;
 	border-radius: 4px;
 	display: inline-block;
 }
